# ii-logos-spacetime-derivation

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PLANS.md  README.md  Spacetime.lean  SpacetimeFull.lean  index.html  lake-manifest.json  lakefile.lean  pyproject.toml  requirements.txt
LICENSES/: LICENSE-CODE  LICENSE-DOCS
Spacetime/: Basic.lean  ConstantCurvature.lean  EigenDirections.lean  NullBridge.lean  NullConeSplit.lean  SignVerdict.lean  SignatureBridge.lean  TimeEvolutionMatrix.lean
docs/: build-status.md  claim-status.md  notebooks.md  paper-lean-notebook-crosswalk.md  proof-visuals.md  public-reader-preview.md  reader-guide.md  repo-operating-system.md  status-definitions.md  theorem-ledger.md
notebooks/: spacetime_sympy_colab.ipynb
paper/: 260504 A Brief Derivation of Spacetime.tex  260504 A Brief Derivation of Spacetime.txt
results/: bracket_surface_summary.json  branch_summary.json  eigendirection_summary.json  invariant_metric_summary.json  lambda_sign_summary.json  manifest.json  matrix_oracle_summary.json  null_bridge_summary.json  regression_summary.json  split_cone_summary.json  time_evolution_summary.json  time_flow_summary.json
scripts/: check_all.sh  check_artifacts.sh  check_lean.sh  check_python.sh  check_truth_surface.py
spec/: claims.yaml  equations.yaml  symbols.yaml
sympy/: spacetime_bracket_surface.py  spacetime_eigendirections.py  spacetime_exact_checks.py  spacetime_flow_scaling.py  spacetime_invariant_form.py  spacetime_lambda_sign.py  spacetime_matrix_oracle.py  spacetime_null_bridge.py  (+3 more)
(+10 files in other folders)
