[project]
name = "ii-logos-spacetime-derivation"
version = "0.5.0"
description = "Verification and explainer skeleton for A Brief Derivation of Spacetime"
requires-python = ">=3.10"
dependencies = [
  "sympy>=1.12",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
notebooks = [
  "jupyter>=1.0",
]

[tool.uv]
package = false
